--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,7 @@
-API_ID=
-API_HASH=
+API_ID=14050586
+API_HASH=42a60d9c657b106370c79bb0a8ac560c
 BOT_TOKEN=
-LOG_GROUP_ID=
-MONGO_DB_URI=
-OWNER_ID=
+LOG_GROUP_ID=-1002293921199
+MONGO_DB_URI=mongodb+srv://SHIVAM:SHIVAM9910887018@shivam.chooc.mongodb.net/?retryWrites=true&w=majority&appName=SHIVAM
+OWNER_ID=5446367898
 STRING_SESSION=
